Archive2/02/6228549fc3bc65/output
main.cpp:11:23: error: non-const lvalue reference to type 'int' cannot bind to an initializer list temporary
    decltype(*first1) adjust = {};
                      ^        ~~
main.cpp:33:5: note: in instantiation of function template specialization 'update_ranks<__gnu_cxx::__normal_iterator<int *, std::vector<int, std::allocator<int> > >, __gnu_cxx::__normal_iterator<int *, std::vector<int, std::allocator<int> > >, std::back_insert_iterator<std::vector<int, std::allocator<int> > > >' requested here
    update_ranks(begin(team), end(team), begin(not_eligible), end(not_eligible), std::back_inserter(result));
    ^
1 error generated.
